.jjconflict-side-1/apps/mautrix/slack/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mautrix-slack
spec:
  ports:
    - name: http
      port: 29335
      targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: mautrix-slack
    app.kubernetes.io/name: mautrix-slack
