.jjconflict-side-1/apps/mautrix/slack/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mautrix-slack
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: synapse
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mautrix-slack
      app.kubernetes.io/name: mautrix-slack
  policyTypes:
    - Ingress
